nit: Fix title align

--- a/resources/ext.embedVideo.consent.less
+++ b/resources/ext.embedVideo.consent.less
@@ -96,4 +96,8 @@
 
 .center .floatnone > .embedvideo {
 	margin: 0 auto;
+
+	.embedvideo-consent__title {
+		text-align: center;
+	}
 }
